--- a/public/index.html
+++ b/public/index.html
@@ -374,7 +374,7 @@
                         <script type = "text/javascript" language="javascript">
                         $.ajax({
                           type: "GET",
-                          url: "https://corona-19.herokuapp.com/infected",
+                          url: "https://corona19-news.herokuapp.com/infected",
                           dataType: "text",
                           success: function(text){
                             console.log(text)
