--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,11 @@
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+<!-- 
   <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-  <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
 
 </head>
 
