--- a/public/test.html
+++ b/public/test.html
@@ -5,16 +5,22 @@
 	<title>Kakao 지도 시작하기</title>
 </head>
 <body>
-	<div id="map" style="width:500px;height:400px;"></div>
+	<div id="map" style="width:1280px;height:720px;"></div>
 	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
 	<script>
 		var container = document.getElementById('map');
 		var options = {
 			center: new kakao.maps.LatLng(33.450701, 126.570667),
-			level: 3
+			level: 1
 		};
 
-		var map = new kakao.maps.Map(container, options);
+        var map = new kakao.maps.Map(container, options);
+        
+        var markerposition = new kakao.maps.LatLng(33.450701, 126.570667);
+        var marker = new kakao.maps.Marker({
+            position: markerposition
+        });
+        marker.setMap(map);
     </script>
 </body>
 </html>
