--- a/public/index.html
+++ b/public/index.html
@@ -708,17 +708,17 @@
                     <script>
                       var container = document.getElementById('map');
                       var options = {
-                        center: new kakao.maps.LatLng(33.450701, 126.570667),
+                        center: new kakao.maps.LatLng(37.560413, 126.983396),
                         level: 14
                       };
 
-                      var map = new kakao.maps.Map(container, options);
+                      // var map = new kakao.maps.Map(container, options);
 
-                      var markerposition = new kakao.maps.LatLng(33.450701, 126.570667);
-                      var marker = new kakao.maps.Marker({
-                        position: markerposition
-                      });
-                      marker.setMap(map);
+                      // var markerposition = new kakao.maps.LatLng(33.450701, 126.570667);
+                      // var marker = new kakao.maps.Marker({
+                      //   position: markerposition
+                      // });
+                      // marker.setMap(map);
                     </script>
 
                     <!-- <div class="text-center">
