--- a/public/index.html
+++ b/public/index.html
@@ -704,7 +704,10 @@
                   <div class="card-body">
 
                     <div id="map" style="width:400px;height:400px;"></div>
-                    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
+                    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey= d21bba611d5b2617ceca0bb656175c49"></script>
+                    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey= d21bba611d5b2617ceca0bb656175c49&libraries=LIBRARY"></script>
+                    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey= d21bba611d5b2617ceca0bb656175c49&libraries=services"></script>
+                    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey= d21bba611d5b2617ceca0bb656175c49&libraries=services,clusterer,drawing"></script>
                     <script>
                       var map = new kakao.maps.Map(document.getElementById('map'), { // 지도를 표시할 div
                           center : new kakao.maps.LatLng(36.2683, 127.6358), // 지도의 중심좌표 
