--- a/public/index.html
+++ b/public/index.html
@@ -56,8 +56,8 @@
       <!-- Nav Item - Dashboard -->
       <li class="nav-item active">
         <a class="nav-link" href="index.html">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>현재 상황</span></a>
+          <i class="fas fa-fw fa-chart-area"></i>
+          <span>코로나19 현재 상황</span></a>
       </li>
 
       <!-- Divider -->
@@ -78,7 +78,7 @@
         <div id="collapseVirus" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">코로나 바이러스</h6>
-            <a class="collapse-item" href="utilities-color.html">코로나 바이러스란?</a>
+            <a class="collapse-item" href="about_corona.html">코로나 바이러스란?</a>
             <a class="collapse-item" href="utilities-border.html">코로나 예방법 및 대처법</a>
           </div>
         </div>
@@ -363,9 +363,9 @@
 
           <!-- Page Heading -->
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-            <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
+            <h1 class="h3 mb-0 text-gray-800">코로나19 상황</h1>
+            <!-- <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+                class="fas fa-download fa-sm text-white-50"></i> Generate Report</a> -->
           </div>
 
           <!-- Content Row -->
@@ -585,12 +585,12 @@
                   <div class="card-body">
                     <div class="chart-pie pt-4 pb-2">
                       <span class = "mr-2">
-                        <i class='fas fa-circle text-warning'></i>확진자
+                        <i class='fas fa-circle text-warning'></i> 확진자
                       </span>
                       <br></br>
                       <br></br>  
                       <span class = "mr-2">
-                        <i class='fas fa-circle text-danger'></i>사망자
+                        <i class='fas fa-circle text-danger'></i> 사망자
                       </span>
                     </div>
                     <!-- <div class="mt-4 text-center small">
@@ -618,7 +618,7 @@
                 <!-- Project Card Example -->
                 <div class="card shadow mb-4">
                   <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary">Projects</h6>
+                    <h6 class="m-0 font-weight-bold text-primary">전 세계 감염자수</h6>
                   </div>
                   <div class="card-body">
                     <h4 class="small font-weight-bold">Server Migration <span class="float-right">20%</span></h4>
@@ -654,16 +654,16 @@
                   <div class="col-lg-6 mb-4">
                     <div class="card bg-primary text-white shadow">
                       <div class="card-body">
-                        Primary
-                        <div class="text-white-50 small">#4e73df</div>
+                        정상(색)
+                        <!-- <div class="text-white-50 small">#4e73df</div> -->
                       </div>
                     </div>
                   </div>
                   <div class="col-lg-6 mb-4">
                     <div class="card bg-success text-white shadow">
                       <div class="card-body">
-                        Success
-                        <div class="text-white-50 small">#1cc88a</div>
+                        확진자 격리 해재(색)
+                        <!-- <div class="text-white-50 small">#1cc88a</div> -->
                       </div>
                     </div>
                   </div>
@@ -678,24 +678,24 @@
                   <div class="col-lg-6 mb-4">
                     <div class="card bg-warning text-white shadow">
                       <div class="card-body">
-                        Warning
-                        <div class="text-white-50 small">#f6c23e</div>
+                        확진자(색)
+                        <!-- <div class="text-white-50 small">#f6c23e</div> -->
                       </div>
                     </div>
                   </div>
                   <div class="col-lg-6 mb-4">
                     <div class="card bg-danger text-white shadow">
                       <div class="card-body">
-                        Danger
-                        <div class="text-white-50 small">#e74a3b</div>
+                        사망자(색)
+                        <!-- <div class="text-white-50 small">#e74a3b</div> -->
                       </div>
                     </div>
                   </div>
                   <div class="col-lg-6 mb-4">
                     <div class="card bg-secondary text-white shadow">
                       <div class="card-body">
-                        Secondary
-                        <div class="text-white-50 small">#808080</div>
+                        치사율(색)
+                        <!-- <div class="text-white-50 small">#808080</div> -->
                       </div>
                     </div>
                   </div>
