--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Kim Na - Dashboard</title>
+  <title>Corona-19 News</title>
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -44,10 +44,8 @@
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
         <div class="sidebar-brand-icon rotate-n-15">
-          <i class="fas fa-laugh-wink"></i>
         </div>
-        <div class="sidebar-brand-text mx-3">Kim Na</div>
-        <!-- <div class="sidebar-brand-text mx-3">Kim Na <sup>2</sup></div> -->
+        <div class="sidebar-brand-text mx-3">코로나-19 뉴스</div>
       </a>
 
       <!-- Divider -->
@@ -79,7 +77,7 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">코로나 바이러스</h6>
             <a class="collapse-item" href="about_corona.html">코로나 바이러스란?</a>
-            <a class="collapse-item" href="utilities-border.html">코로나 예방법 및 대처법</a>
+            <a class="collapse-item" href="prevent_corona.html">코로나 예방법 및 대처법</a>
           </div>
         </div>
       </li>
@@ -501,7 +499,7 @@
                             dataType: "text",
                             success: function (text) {
                               console.log(text)
-                              document.getElementById("die_percentage").innerText = text + "%"
+                              document.getElementById("die_percentage").innerText = "0." + text + "%"
                             },
                             error: function (xhr, status, error) {
                               console.log(error)
@@ -785,7 +783,7 @@
         <footer class="sticky-footer bg-white">
           <div class="container my-auto">
             <div class="copyright text-center my-auto">
-              <span>Copyright &copy; Kim Na 2020</span>
+              <span>Copyright &copy; Corona-19 News 2020</span>
             </div>
           </div>
         </footer>
