--- a/public/prevent_corona.html
+++ b/public/prevent_corona.html
@@ -173,16 +173,16 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-1 text-gray-800">코로나 바이러스란</h1>
-          <img src = /images/corona.jpg width="200" height="200">
+          <h1 class="h3 mb-1 text-gray-800">코로나19 예방법</h1>
+          <img src = /images/wash_hand.png width="400" height="300">
           <br></br>
-          <p class="mb-1">코로나 바이러스는 사람이나 동물에서 호흡기 질환을 일으키는 바이러스로 감기를 일으키는 원인 바이러스 중 하나입니다.<br>이 바이러스는 현미경으로 관찰했을 때 코로나 모양이라서 붙여진 이름입니다.</br> 2003년 사스(중증 급성 호흡기 증후군)와 2015년 메르스(중동 호흡기 증후군)가 이 코로나 바이러스로 인한 것이었습니다.</p>
-
+          <p class="mb-1">손은 대부분의 감염병을 옮기는 매개체이므로 철저한 손씻기가 가장 중요한 감염병 예방법입니다.<br>사람의 분비물은 직접 튀는 경우보다, 그 분비물이 어딘가에 묻었는데 손으로 만져서 몸으로
+            들어올 확률이 더 높다고 알려져 있습니다.</br> 흐르는 물에 비누를 이용하여 30초 이상 손을 씻으면 바이러스는 거의 다 죽거나 힘이 약해져 감염을 일으키기 힘들다고 합니다.
+        </p>
           <hr class="sidebar-divider d-none d-md-block">
           <!-- Page body -->
-          <h1 class="h3 mb-1 text-gray-800">코로나 바이러스 주요 증상</h1>
-          <br class="mb-1">코로나-19에 감염되면 2~3일에서 최장 2주 정도 잠복기를 거쳤다가 다양한 증상이 나타납니다.<br>주로 무기력감, 37.5도 이상의 고열, 기침, 인후통, 가래, 근육통, 두통, 호흡곤란, 폐렴 등의 증상이 발생합니다.</br>폐 손상에 따른 호흡부전으로 심하면 사망에 이를 수도 있습니다.</p>
-          <!-- Content Row -->
+          <h1 class="h3 mb-1 text-gray-800">코로나19 대처법</h1>
+          <br class="mb-1">기침 시에는 분비물이 손이나 공기 중에 뿌려지지 않도록 옷소매에 하는 것이 좋습니다.<br>또 호흡기 증상이 있는 사람과의 밀접한 접촉을 피하고 사람 많이 모인 곳에는 가지 않아야 하겠습니다.</br></p>
 
       </div>
       <!-- End of Main Content -->
