--- a/public/prevent_corona.html
+++ b/public/prevent_corona.html
@@ -42,7 +42,7 @@
         <li class="nav-item">
             <a class="nav-link" href="index.html">
                 <i class="fas fa-fw fa-chart-area"></i>
-                <span>코로나19 현재 상황</span></a>
+                <span>코로나-19 현재 상황</span></a>
         </li>
 
         <!-- Divider -->
@@ -79,6 +79,7 @@
                     <a class="collapse-item" href="utilities-animation.html">코로나 관련 봉사 지원 및 후원</a>
                     <a class="collapse-item" href="utilities-other.html">예방물품</a>
                     <a class="collapse-item" href="utilities-other.html">마스크 무료 보급소 위치</a>
+                    <a class="collapse-item" href="http://www.mohw.go.kr/react/popup_200128.html">코로나-19 선별진료소</a>
                 </div>
             </div>
         </li>
@@ -173,7 +174,7 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-1 text-gray-800">코로나19 예방법</h1>
+          <h1 class="h3 mb-1 text-gray-800">코로나-19 예방법</h1>
           <img src = /images/wash_hand.png width="400" height="300">
           <br></br>
           <p class="mb-1">손은 대부분의 감염병을 옮기는 매개체이므로 철저한 손씻기가 가장 중요한 감염병 예방법입니다.<br>사람의 분비물은 직접 튀는 경우보다, 그 분비물이 어딘가에 묻었는데 손으로 만져서 몸으로
@@ -181,7 +182,7 @@
         </p>
           <hr class="sidebar-divider d-none d-md-block">
           <!-- Page body -->
-          <h1 class="h3 mb-1 text-gray-800">코로나19 대처법</h1>
+          <h1 class="h3 mb-1 text-gray-800">코로나-19 대처법</h1>
           <br class="mb-1">기침 시에는 분비물이 손이나 공기 중에 뿌려지지 않도록 옷소매에 하는 것이 좋습니다.<br>또 호흡기 증상이 있는 사람과의 밀접한 접촉을 피하고 사람 많이 모인 곳에는 가지 않아야 하겠습니다.</br></p>
 
       </div>
