--- a/public/about_corona.html
+++ b/public/about_corona.html
@@ -42,7 +42,7 @@
         <li class="nav-item">
             <a class="nav-link" href="index.html">
                 <i class="fas fa-fw fa-chart-area"></i>
-                <span>코로나19 현재 상황</span></a>
+                <span>코로나-19 현재 상황</span></a>
         </li>
 
         <!-- Divider -->
@@ -79,6 +79,7 @@
                     <a class="collapse-item" href="utilities-animation.html">코로나 관련 봉사 지원 및 후원</a>
                     <a class="collapse-item" href="utilities-other.html">예방물품</a>
                     <a class="collapse-item" href="utilities-other.html">마스크 무료 보급소 위치</a>
+                    <a class="collapse-item" href="http://www.mohw.go.kr/react/popup_200128.html">코로나-19 선별진료소</a>
                 </div>
             </div>
         </li>
