--- a/public/index.html
+++ b/public/index.html
@@ -548,7 +548,7 @@
               <div class="col-xl-8 col-lg-7">
                 <div class="card shadow mb-4">
                   <!-- Card Header - Dropdown -->
-                  <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <div class="card-header py-1 d-flex flex-row align-items-center justify-content-between">
                     <h6 class="m-0 font-weight-bold text-primary">국내 코로나-19 확진자 증가 추세</h6>
                     <div class="dropdown no-arrow">
                       <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
@@ -575,10 +575,10 @@
               </div>
 
               <!-- Pie Chart -->
-              <div class="col-xl-4 col-lg-5">
+              <div class="col-xl-4 col-lg-6">
                 <div class="card shadow mb-4">
                   <!-- Card Header - Dropdown -->
-                  <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <div class="card-header py-4 d-flex flex-row align-items-center justify-content-between">
                     <h6 class="m-0 font-weight-bold text-primary">오늘 추가 발생 확진자/사망자</h6>
                     <div class="dropdown no-arrow">
                     </div>
@@ -615,7 +615,7 @@
             <div class="row">
 
               <!-- Content Column -->
-              <div class="col-lg-6 mb-4">
+              <div class="col-lg-12 mb-4">
 
                 <!-- Project Card Example -->
                 <div class="card shadow mb-4">
@@ -652,21 +652,21 @@
                 </div>
 
                 <!-- Color System -->
-                <div class="row">
+                <!-- <div class="row">
                   <div class="col-lg-6 mb-4">
                     <div class="card bg-primary text-white shadow">
                       <div class="card-body">
-                        정상(색)
+                        정상(색) -->
                         <!-- <div class="text-white-50 small">#4e73df</div> -->
-                      </div>
+                      <!-- </div>
                     </div>
                   </div>
                   <div class="col-lg-6 mb-4">
                     <div class="card bg-success text-white shadow">
                       <div class="card-body">
-                        확진자 격리 해재(색)
+                        확진자 격리 해재(색) -->
                         <!-- <div class="text-white-50 small">#1cc88a</div> -->
-                      </div>
+                      <!-- </div>
                     </div>
                   </div>
                   <div class="col-lg-6 mb-4">
@@ -680,43 +680,43 @@
                   <div class="col-lg-6 mb-4">
                     <div class="card bg-warning text-white shadow">
                       <div class="card-body">
-                        확진자(색)
+                        확진자(색) -->
                         <!-- <div class="text-white-50 small">#f6c23e</div> -->
-                      </div>
+                      <!-- </div>
                     </div>
                   </div>
                   <div class="col-lg-6 mb-4">
                     <div class="card bg-danger text-white shadow">
                       <div class="card-body">
-                        사망자(색)
+                        사망자(색) -->
                         <!-- <div class="text-white-50 small">#e74a3b</div> -->
-                      </div>
+                      <!-- </div>
                     </div>
                   </div>
                   <div class="col-lg-6 mb-4">
                     <div class="card bg-secondary text-white shadow">
                       <div class="card-body">
-                        치사율(색)
+                        치사율(색) -->
                         <!-- <div class="text-white-50 small">#808080</div> -->
-                      </div>
+                      <!-- </div>
                     </div>
                   </div>
                 </div>
 
-              </div>
+              </div> -->
 
               <div class="col-lg-6 mb-4">
 
                 <!-- Illustrations -->
-                <div class="card shadow mb-4">
-                  <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary">국내 지역별 확진자</h6>
-                  </div>
+                <!-- <div class="card shadow mb-4"> -->
+                  <!-- <div class="card-header py-3"> -->
+                    <!-- <h6 class="m-0 font-weight-bold text-primary">국내 지역별 확진자</h6> -->
+                  <!-- </div> -->
                   <div class="card-body">
 
-                    <div id="map" style="width:400px;height:400px;"></div>
+                    <!-- <div id="map" style="width:400px;height:400px;"></div> -->
                     <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey= d21bba611d5b2617ceca0bb656175c49"></script> -->
-                    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49&libraries=clusterer"></script>
+                    <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49&libraries=clusterer"></script>
                     <script>
                       var map = new kakao.maps.Map(document.getElementById('map'), { // 지도를 표시할 div
                           center : new kakao.maps.LatLng(36.2683, 127.6358), // 지도의 중심좌표 
@@ -744,7 +744,7 @@
                           // 클러스터러에 마커들을 추가합니다
                           clusterer.addMarkers(markers);
                       });
-                  </script>
+                  </script> -->
 
                     <!-- <div class="text-center">
                       <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;"
