--- a/public/test.html
+++ b/public/test.html
@@ -1,98 +1,84 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<meta charset="utf-8">
-	<title>다각형에 이벤트 등록하기2</title>
 	<style>
-		.area {
-			position: absolute;
-			background: #fff;
-			border: 1px solid #888;
-			border-radius: 3px;
-			font-size: 12px;
-			top: -5px;
-			left: 15px;
-			padding: 2px;
-		}
-
-		.info {
-			font-size: 12px;
-			padding: 5px;
-		}
-
-		.info .title {
-			font-weight: bold;
-		}
+	#text {
+		height: 50px;
+	}
+	#list {
+		margin : 10px;
+	}
+	.area {
+	    position: absolute;
+	    background: #fff;
+	    border: 1px solid #888;
+	    border-radius: 3px;
+	    font-size: 12px;
+	    top: -5px;
+	    left: 15px;
+	    padding:2px;
+	}
+	#mapwrap{position:relative;overflow:hidden;}
+	#menu {cursor:pointer;background-image:url('./icon.png');position:absolute;overflow:hidden;top:10px;left:10px;width:100px;height:180px;z-index:10;border:1px solid black;background-color:#fff;}
 	</style>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
+	<script type="text/javascript" src=".js/demo/bPolygon.js"></script>
 </head>
-
 <body>
-	<div id="map" style="width:100%;height:350px;"></div>
 
-	<script type="text/javascript"
-		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
-	<script>
-		// 지도에 폴리곤으로 표시할 영역데이터 배열입니다 
-		$.getJSON("data/korea.json", function (geojson) {
-			var data = geojson.features;
-			var coodinates = [];
-			var name = '';
+	<div id="text"></div>
 
-			$.each(data, function (index, val) {
-				coodinates = val.geometry.coodinates;
-				name = val.properties.SIG_KOR_NM;
-				displayArea(coordinates, nam);
-			})
-		})
+	<div id="mapwrap">
+		<div id="map" style="width:500px;height:500px;"></div>
+		<div id="menu"></div>
+	</div>
+	
+	<div id="list">
+		<input type="button" code="11" value="서울" />
+		<input type="button" code="26" value="부산" />
+		<input type="button" code="28" value="인천" />
+		<input type="button" code="41" value="경기" />
+		<input type="button" code="50" value="제주" />
+	</div>
+<script>
+	var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+    mapOption = { 
+        center: new kakao.maps.LatLng(37.56489752922437, 126.97511613320933), // 지도의 중심좌표
+        level: 13 // 지도의 확대 레벨
+    };
+	map = new kakao.maps.Map(mapContainer, mapOption);
+	
+	var bPolygons = new bPolygon(map);
+	bPolygons.init();
 
-		var polygons = [];
+	$("#list input").click(function(){
+		bPolygons.show($(this).attr('code'));
+	});
+	
 
-
-		function displayArea(coordinates, name) {
-
-			// 다각형을 생성합니다 
-			var path = [];
-			var points = [];
-
-			$.each(coordinates[0], function (index, coordinates) {
-				var point = new Object();
-				point.x = coodinates[1];
-				point.y = coodinates[0];
-				points.push(point);
-				path.push(new kakao.maps.LatLng(coordinates[1], coordinates[0]));
-			})
-			var polygon = new kakao.maps.Polygon({
-				map: map, // 다각형을 표시할 지도 객체
-				path: area.path,
-				strokeWeight: 2,
-				strokeColor: '#004c80',
-				strokeOpacity: 0.8,
-				fillColor: '#fff',
-				fillOpacity: 0.7
-			});
-			polygons.push(polygon);
-
-			kakao.maps.event.addListener(polygon, 'mouseover', function(mouseEvent){
-				polygon.setOptions({
-					fillColor : '#09f'
-				});
-				customOverlay.setContent('<div class = "area">' + name + '</div>')
-				customOverlay.setPostion(mouseEvent.latLng);
-				customOverlay.setMap(map);
-
-			});
-			kakao.maps.event.addListener(polygon, 'mousemove', function(mouseEvent){
-				customOverlay.setPostion(mouseEvent.latLng);
-			});
-			kakao.maps.event.addListener(polygon, 'mouseout', function(){
-				polygon.setOptions({
-					fillColor : '#fff'
-				});
-				customOverlay.setMap(null);
-			})
+	// 클릭 시, 정보 가져오기
+	$("#mapwrap").click(function(){
+		var info = bPolygons.getInfo();
+		var text = '';
+		if(info.code == 0){
+			text = info.pname;
+		} else if(info.pcode == 0) {
+			text = info.name;
+		} else {
+			text = info.pname + " " + info.name;
 		}
-	</script>
+		$("#text").html(text);
+	});
+	
+	// 지도 위 메뉴
+	$("#menu").click(function(){
+		bPolygons.show('0');
+		$("#mapwrap").trigger('click');
+	});
+	
+	$("#mapwrap").trigger('click');
+</script>
 </body>
-
 </html>
