--- a/public/test.html
+++ b/public/test.html
@@ -33,6 +33,12 @@
 	<script type="text/javascript"
 		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
 	<script>
+
+	var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+		mapOption = {
+			center: new kakao.maps.LatLng(37.566826, 126.9786567), // 지도의 중심좌표
+			level: 8 // 지도의 확대 레벨
+		};
 		// 지도에 폴리곤으로 표시할 영역데이터 배열입니다 
 		$.getJSON("data/korea.json", function (geojson) {
 			var data = geojson.features;
